@@ -122,6 +122,11 @@
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-java-project</artifactId>
+            <version>${netbeans.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-modules-java-source-base</artifactId>
             <version>${netbeans.version}</version>
         </dependency>
@@ -148,12 +153,6 @@
         </dependency>
         <dependency>
             <groupId>org.netbeans.modules</groupId>
-            <artifactId>org-netbeans-lib-nbjavac</artifactId>
-            <version>${netbeans.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.netbeans.modules</groupId>
             <artifactId>org-netbeans-modules-parsing-nb</artifactId>
             <version>${netbeans.version}</version>
             <scope>test</scope>
@@ -173,7 +172,7 @@
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-core</artifactId>
-            <version>1.466.2</version>
+            <version>2.249.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -181,7 +180,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+                <groupId>org.apache.netbeans.utilities</groupId>
                 <artifactId>nbm-maven-plugin</artifactId>
                 <extensions>true</extensions>
             </plugin>
@@ -190,63 +189,6 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <useDefaultManifestFile>true</useDefaultManifestFile>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>endorsed</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <outputDirectory>${endorsed.dir}</outputDirectory>
-                    <silent>true</silent>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>org.netbeans.api</groupId>
-                            <artifactId>org-netbeans-libs-javacapi</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.external</groupId>
-                            <artifactId>nb-javac-api</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.modules</groupId>
-                            <artifactId>org-netbeans-libs-javacimpl</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>org.netbeans.external</groupId>
-                            <artifactId>nb-javac-impl</artifactId>
-                            <version>${netbeans.version}</version>
-                        </artifactItem>
-                    </artifactItems>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                 </configuration>
             </plugin>
         </plugins>
